# Freescale_QorIQ_RCW_Readback

./: .gitignore  README.md  build.sh  serve.sh
Rust project/: Cargo.toml
Rust project/config/: p2041_rcw.xml  p3041_rcw.xml  p4080_rcw.xml  p5020_rcw.xml  p5040_rcw.xml  t1024_rcw.xml  t1040_rcw.xml  t2080_rcw.xml  t4240_rcw.xml
Rust project/src/: config.rs  lib.rs  pbl.rs  rcw.rs
Rust project/tests/: parse_integration.rs
Rust project/web/: index.js
